--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,6 +31,22 @@
         android:layout_marginRight="30dp"
         android:layout_marginBottom="40dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/background_blue_sky"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/ivRole"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/people"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etNombre"
         android:layout_width="match_parent"
@@ -38,14 +54,27 @@
         android:hint="@string/name"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:drawableStart="@android:drawable/ic_menu_myplaces"
         android:paddingStart="16dp"
+        android:background="@drawable/background_blue_sky"
+        app:cornerRadius="20dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/background_blue_sky"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/background_blue_sky"
-        app:cornerRadius="20dp"/>
-
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/ivEmail"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/email"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etCorreo"
         android:layout_width="match_parent"
@@ -53,15 +82,28 @@
         android:textSize="20sp"
         android:hint="@string/email"
         android:textStyle="bold"
-        android:drawableStart="@android:drawable/ic_dialog_email"
         android:paddingStart="16dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:background="@drawable/background_blue_sky"
         app:cornerRadius="20dp"
         android:inputType="textPassword" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/background_blue_sky"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/ivPassword"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/password"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etContrasena"
         android:layout_width="match_parent"
@@ -69,14 +111,27 @@
         android:hint="@string/password"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:drawableStart="@android:drawable/ic_lock_lock"
         android:paddingStart="16dp"
+        android:background="@drawable/background_blue_sky"
+        app:cornerRadius="20dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/background_blue_sky"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/background_blue_sky"
-        app:cornerRadius="20dp"/>
-
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/ivConfirmPassword"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/password"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etConfirmarContrasena"
         android:layout_width="match_parent"
@@ -84,14 +139,11 @@
         android:textSize="20sp"
         android:hint="@string/confirm_password"
         android:textStyle="bold"
-        android:drawableStart="@android:drawable/ic_lock_lock"
         android:paddingStart="16dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:background="@drawable/background_blue_sky"
         app:cornerRadius="20dp"
         android:inputType="textPassword" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnRegistrarse"
