--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     tools:context=".AddEdit">
 
+    <ImageView
+        android:id="@+id/ivBackArrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/back_arrow"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp" />
+
     <TextView
         android:id="@+id/tvAgregarEditar"
         android:layout_width="wrap_content"
@@ -16,7 +24,6 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
         android:layout_marginBottom="8dp" />
 
     <TextView
@@ -29,7 +36,7 @@
         android:gravity="center"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_marginBottom="10dp" />
 
     <EditText
         android:id="@+id/etNombreTarea"
