--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -1,19 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
-    >
+    android:padding="8dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ajdlfkad"
-        />
+    <LinearLayout
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/circle_color_member" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chuy"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tarea"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="80dp"
+        android:background="@drawable/background_white_light"
+        android:backgroundTint="@color/white_light"
+        android:elevation="10dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Limpiar baño"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tienes que limpiar bien chuy, la otra vez dejaste muy sucio"
+                android:textColor="@color/gray_dark"
+                android:textSize="16sp"
+                android:textStyle="normal" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="end"
+            android:layout_weight="0">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:background="@drawable/task_button"
+                android:gravity="center"
+                android:padding="0dp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
