--- a/app/src/main/res/layout/settings_member.xml
+++ b/app/src/main/res/layout/settings_member.xml
@@ -7,6 +7,8 @@
     android:gravity="center_vertical">
 
     <TextView
+        android:text="@string/name"
+        android:gravity="center_vertical"
         android:id="@+id/tvNombre"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -14,17 +16,17 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <Spinner
-        android:id="@+id/spinnerRol"
+    <CheckBox
+        android:id="@+id/rol"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp" />
 
     <ImageView
         android:id="@+id/btnEliminar"
-        android:layout_width="40dp"
+        android:layout_width="30dp"
         android:layout_height="40dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:src="@drawable/eliminate" />
 
 </LinearLayout>
