--- a/app/src/main/res/layout/activity_crear_unirse_hogar.xml
+++ b/app/src/main/res/layout/activity_crear_unirse_hogar.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_blue_sky"
+    android:padding="20dp"
     tools:context=".CrearUnirseHogar">
 
 
@@ -29,7 +30,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="80dp"
         android:layout_marginRight="80dp"
-        android:visibility="visible">
+        android:visibility="gone">
 
 
         <!-- Botón Crear Hogar -->
@@ -90,7 +91,8 @@
     <GridView
         android:id="@+id/lista_casas"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="4dp"
+        android:background="@drawable/rounded_button"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_weight="7.4"
@@ -99,70 +101,71 @@
         android:padding="8dp"
         android:stretchMode="columnWidth"
         android:verticalSpacing="16dp"
-        android:visibility="gone"/>
+        android:visibility="visible"
+        android:choiceMode="singleChoice"/>
 
     <!-- Para los botones en caso que si haya casa -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="185dp"
-        android:visibility="gone">
-
+        android:gravity="end"
+        android:layout_marginTop="50dp"
+        android:visibility="visible">
 
         <!-- Botón Crear Hogar -->
         <LinearLayout
             android:id="@+id/btn_crear_hogar"
             android:layout_width="99dp"
-            android:layout_height="90dp"
-            android:orientation="vertical"
+            android:layout_height="99dp"
             android:layout_marginBottom="5dp"
-            android:gravity="center"
             android:background="@drawable/rounded_button"
+            android:gravity="center"
+            android:orientation="vertical"
             android:padding="12dp">
 
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/add_home"/>
+                android:src="@drawable/add_home" />
 
             <TextView
+                android:id="@+id/tv_crear_casa"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:text="Crear Casa"
-                android:textSize="13sp"
                 android:textColor="@android:color/white"
-                android:textStyle="bold"
-                android:layout_marginTop="4dp"/>
+                android:textSize="13sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- Botón Nuevo Hogar -->
         <LinearLayout
             android:id="@+id/btn_nuevo_hogar"
             android:layout_width="99dp"
-            android:layout_height="90dp"
-            android:orientation="vertical"
+            android:layout_height="99dp"
             android:layout_marginBottom="5dp"
             android:layout_marginStart="16dp"
             android:gravity="center"
             android:background="@drawable/rounded_button"
+            android:orientation="vertical"
             android:padding="12dp">
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/add"/>
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/add" />
 
-        <TextView
-            android:layout_width="75dp"
-            android:layout_height="wrap_content"
-            android:text="Nueva casa"
-            android:textSize="13sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:layout_marginTop="4dp"/>
+            <TextView
+                android:id="@+id/tv_nueva_casa"
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Nueva casa"
+                android:textSize="13sp"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -173,7 +176,7 @@
         android:text="Cerrar sesión"
         android:textColor="@android:color/black"
         android:textStyle="bold"
-        android:layout_marginTop="5dp"
+        android:padding="5dp"
         android:layout_gravity="center"
         android:clickable="true" />
 
