Navegación de la pantalla para unirse a una casa
Se hicieron algunos ajustes minimos en la vista y se agrego la navegación de la pantalla para unirse a una casa

--- a/app/src/main/res/layout/activity_join_house.xml
+++ b/app/src/main/res/layout/activity_join_house.xml
@@ -8,21 +8,14 @@
     android:layout_height="match_parent"
     tools:context=".JoinHouse">
 
-    <LinearLayout
+    <ImageView
         android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="8dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:focusable="true">
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/back_arrow"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/back"/>
-    </LinearLayout>
 
 
     <LinearLayout
