--- a/app/src/main/res/layout/activity_crear_unirse_hogar.xml
+++ b/app/src/main/res/layout/activity_crear_unirse_hogar.xml
@@ -171,6 +171,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/btn_cerrar_sesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cerrar sesión"
