--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:gravity="center_vertical">
 
             <TextView
+                android:id="@+id/tv_casanombre_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -32,15 +33,18 @@
                 android:textColor="#00B2BE"/>
         </LinearLayout>
 
-
-
-        <!-- Aquí iría el contenido de la pantalla -->
+        <ListView
+            android:id="@+id/lv_dias"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10dp"/>
     </LinearLayout>
 
-    <!-- Botón flotante en la esquina inferior derecha -->
+
     <ImageView
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/add_task"
         android:contentDescription="Agregar tarea"
         android:layout_margin="16dp"
