--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -19,7 +19,7 @@
             android:padding="8dp">
 
             <TextView
-                android:id="@+id/tv_day"
+                android:id="@+id/tv_dia"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_day"
@@ -38,6 +38,14 @@
                 android:max="2"
                 android:progress="1" />
         </LinearLayout>
+
+        <ListView
+            android:id="@+id/lv_tareas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10dp"
+            android:nestedScrollingEnabled="true"/>
 
         <!-- Tarea de ejemplo, se eliminará después -->
         <LinearLayout
@@ -60,6 +68,7 @@
                     android:background="@drawable/circle_color_member"
                     />
                 <TextView
+                    android:id="@+id/tv_miembro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Chuy"
@@ -78,6 +87,7 @@
                 android:padding="4dp">
 
                 <TextView
+                    android:id="@+id/tv_titulotarea"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -85,6 +95,7 @@
                     android:textSize="16sp"
                     android:textStyle="bold"/>
                 <TextView
+                    android:id="@+id/tv_descripciontarea"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -97,64 +108,6 @@
 
         </LinearLayout>
 
-        <!-- Este es otro ejemplo, luego se cambiará -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp"
-            android:gravity="center_vertical">
-
-
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="50dp"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_marginEnd="10dp">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/circle_color_member"
-                    android:backgroundTint="@color/green"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Abel"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:orientation="vertical"
-                android:background="@drawable/background_white_light"
-                android:backgroundTint="@color/white_light"
-                android:elevation="10dp"
-                android:padding="4dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Limpiar baño"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/gray_dark"
-                    android:text="Tienes que limpiar bien chuy, la otra vez dejaste muy  sucio"
-                    android:textSize="16sp"
-                    android:textStyle="normal"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
 
     </LinearLayout>
 
