--- a/app/src/main/res/drawable/task_button.xml
+++ b/app/src/main/res/drawable/task_button.xml
@@ -2,7 +2,13 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/green"/>
-            <corners android:radius="15dp"/>
+            <corners android:topRightRadius="15dp" android:bottomRightRadius="15dp"/>
         </shape>
     </item>
+
+    <item
+        android:drawable="@drawable/vector"
+        android:height="50dp"
+        android:width="50dp"
+        android:gravity="center"/>
 </layer-list>
