--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
-
+            android:id="@+id/iv_color"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/circle_color_member" />
@@ -33,7 +33,6 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@drawable/background_white_light"
-        android:backgroundTint="@color/white_light"
         android:elevation="10dp"
         android:orientation="horizontal">
 
@@ -41,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:padding="6dp"
             android:layout_weight="1">
 
             <TextView
@@ -68,8 +68,8 @@
             android:gravity="end"
             android:layout_weight="0">
 
-            <Button
-                android:layout_width="wrap_content"
+            <ImageButton
+                android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/task_button"
                 android:gravity="center"
@@ -78,5 +78,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
 
 </LinearLayout>
