--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,14 @@
         android:orientation="vertical">
 
         <!-- Encabezado -->
+        <ImageView
+            android:id="@+id/ivSettings"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/lines_3"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,14 +43,16 @@
 
         <ListView
             android:id="@+id/lv_dias"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:divider="@android:color/transparent"
             android:dividerHeight="10dp"/>
     </LinearLayout>
 
 
     <ImageView
+        android:id="@+id/addTask"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/add_task"
