--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:clickable="true"
+    android:focusable="true"
+    >
 
     <LinearLayout
         android:layout_width="80dp"
@@ -73,7 +76,10 @@
                 android:layout_height="80dp"
                 android:background="@drawable/task_button"
                 android:gravity="center"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:focusable="false"
+                android:clickable="false"
+                />
 
         </LinearLayout>
 
