--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -47,67 +47,62 @@
             android:nestedScrollingEnabled="true"/>
 
         <!-- Tarea de ejemplo, se eliminará después -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp"
-            android:gravity="center_vertical">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:padding="8dp"-->
+<!--            android:gravity="center_vertical">-->
+<!--            -->
+<!--            <LinearLayout-->
+<!--                android:layout_width="80dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:orientation="vertical"-->
+<!--                android:gravity="center"-->
+<!--                android:layout_marginEnd="10dp">-->
+<!--                <ImageView-->
+<!--                    android:layout_width="20dp"-->
+<!--                    android:layout_height="20dp"-->
+<!--                    android:background="@drawable/circle_color_member"-->
+<!--                    />-->
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_miembro"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Chuy"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:textStyle="bold"/>-->
+<!--            </LinearLayout>-->
 
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="80dp"-->
+<!--                android:orientation="vertical"-->
+<!--                android:background="@drawable/background_white_light"-->
+<!--                android:backgroundTint="@color/white_light"-->
+<!--                android:elevation="10dp"-->
+<!--                android:padding="4dp">-->
 
-            <LinearLayout
-                android:layout_width="80dp"
-                android:layout_height="50dp"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_marginEnd="10dp">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/circle_color_member"
-                    />
-                <TextView
-                    android:id="@+id/tv_miembro"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Chuy"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_titulotarea"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:text="Limpiar baño"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:textStyle="bold"/>-->
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_descripciontarea"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:textColor="@color/gray_dark"-->
+<!--                    android:text="Tienes que limpiar bien chuy, la otra vez dejaste muy  sucio"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:textStyle="normal"/>-->
 
+<!--            </LinearLayout>-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:orientation="vertical"
-                android:background="@drawable/background_white_light"
-                android:backgroundTint="@color/white_light"
-                android:elevation="10dp"
-                android:padding="4dp">
-
-                <TextView
-                    android:id="@+id/tv_titulotarea"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Limpiar baño"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/tv_descripciontarea"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/gray_dark"
-                    android:text="Tienes que limpiar bien chuy, la otra vez dejaste muy  sucio"
-                    android:textSize="16sp"
-                    android:textStyle="normal"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
+<!--        </LinearLayout>-->
     </LinearLayout>
-
 </LinearLayout>
