--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -5,8 +5,7 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:clickable="true"
-    android:focusable="true"
+    android:id="@+id/ll_container"
     >
 
     <LinearLayout
@@ -26,7 +25,7 @@
             android:id="@+id/tv_miembro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chuy"
+            android:text="Chuyito"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -77,8 +76,6 @@
                 android:background="@drawable/task_button"
                 android:gravity="center"
                 android:padding="0dp"
-                android:focusable="false"
-                android:clickable="false"
                 />
 
         </LinearLayout>
