Validación y acomodo de metodos
Se establecieron lo que deben hacer las clases en textos TODO y se añadieron algunas comprobaciones a los editText

--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -8,11 +8,14 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".TaskDetail">
-    <ImageButton
+    <ImageView
         android:id="@+id/ivBackArrow"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        />
+        android:src="@drawable/back_arrow"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="left"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:layout_marginTop="50dp"
